get tests up and running

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,3 +1,10 @@
+-r requirements.txt
+
+# Documentation
+Sphinx
+sphinx-rtd-theme
+
+# Package building / upload
 bumpversion==0.5.3
 wheel==0.30.0
-
+twine
