--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,3 +1,5 @@
+-r requirements.txt
+
 coverage==4.4.1
 mock>=1.0.1
 flake8>=2.1.0
@@ -6,3 +8,7 @@ codecov>=2.0.0
 
 
 # Additional test requirements go here
+
+django-environ
+
+pytest
