--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v4.5.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -8,38 +8,38 @@ repos:
       - id: check-added-large-files
       - id: check-toml
   - repo: https://github.com/asottile/pyupgrade
-    rev: v3.1.0
+    rev: v3.15.1
     hooks:
       - id: pyupgrade
-        args: [--py310-plus]
+        args: [--py311-plus]
   - repo: https://github.com/adamchainz/django-upgrade
-    rev: 1.11.0
+    rev: 1.16.0
     hooks:
       - id: django-upgrade
-        args: [--target-version, "4.1"]
+        args: [--target-version, "5.0"]
   - repo: https://github.com/psf/black
     # black config is in pyproject.toml
-    rev: 22.10.0
+    rev: 24.2.0
     hooks:
       - id: black
         language_version: python3.11
         exclude: ^docs
   - repo: https://github.com/timothycrosley/isort
     # isort config in pyproject.toml does not work FIXME
-    rev: 5.10.1
+    rev: 5.13.2
     hooks:
       - id: isort
         language_version: python3
         args: [--profile=black, --line-length=120]
-  - repo: https://gitlab.com/pycqa/flake8
+  - repo: https://github.com/PyCQA/flake8
     # flake8 config is in .flake8
-    rev: 3.9.2
+    rev: 7.0.0
     hooks:
       - id: flake8
         language_version: python3
         exclude: ^docs
   - repo: https://github.com/rtts/djhtml
-    rev: "v1.5.2"  # replace with the latest tag on GitHub
+    rev: "3.0.6"  # replace with the latest tag on GitHub
     hooks:
       - id: djhtml
         args: [-t, "2"]
