--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,20 @@
 [tox]
 envlist =
-    {py34,py35,py36}-django-20
-    {py27,py34,py35,py36}-django-111
+    {py310,py311,py312}-django
+
+isolated_build = true
 
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/filepond
-commands = coverage run --source filepond runtests.py
 deps =
-    django-111: Django>=1.11,<1.12
-    django-20: Django>=2.0,<2.1
-    -r{toxinidir}/requirements_test.txt
+    flit
+    django-42: Django>=4.2
+commands =
+    flit install -s
+    python manage.py migrate
+    coverage run --source filepond runtests.py
 basepython =
-    py36: python3.6
-    py35: python3.5
-    py34: python3.4
-    py27: python2.7
+    py310: python3.10
+    py311: python3.11
+    py312: python3.12
